--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: C9DEF4 #80B3FF
-  primary-rgb: "201,222,244" #"128,179,255"
-  secondary: F5CCD4 #FD6E8A
-  secondary-dark: B8A4C9 #A2122F
+  primary: C8E9A0 #80B3FF
+  primary-rgb: "200,233,160" #"128,179,255"
+  secondary: F7A278 #FD6E8A
+  secondary-dark: 6DD3CE #A2122F
 
 # Footer settings
 footer:
@@ -40,7 +40,7 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/beau-gilbert93/
+    url: www.linkedin.com/in/krista-carter-1273a0372
   - title: github
     url: https://github.com/KristaC1982
 
